--- a/app/views/shared/_post_details.html.erb
+++ b/app/views/shared/_post_details.html.erb
@@ -1,10 +1,20 @@
-<div class="flex">
-  <div class="flex flex-col">
-    <%= link_to post.author.name, post.author.profile, class: "font-bold text-white hover:underline", data: {turbo_frame: "_top"} %>
-    <%= link_to "@#{post.author.profile.username}", post.author.profile, class: "font-medium text-gray-600 hover:underline", data: {turbo_frame: "_top"} %>
+<div class="flex items-center">
+  <div class="flex gap-1 ">
+    <%= link_to post.author.name,
+    post.author.profile,
+    class: "font-bold text-gray-200 hover:underline",
+    data: {
+      turbo_frame: "_top",
+    } %>
+    <%= link_to "@#{post.author.profile.username}",
+    post.author.profile,
+    class: "font-medium text-gray-600 hover:underline",
+    data: {
+      turbo_frame: "_top",
+    } %>
   </div>
-  <span class="ml-2 text-gray-500">·</span>
-  <span class="ml-2 text-gray-500">
+  <span class="px-1 text-gray-500">·</span>
+  <span class="text-gray-500">
     <%= time_ago_in_words(post.created_at) %>
     ago
   </span>
